--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,6 +12,39 @@ layout: default
       <p>{{site.about-author}}</p>
     </div>
   </header> <!-- End Header -->
+
+  <footer>
+    <section class="contact">
+      <h3 class="contact-title">Categories</h3>
+      <ul class="tags">
+        {% assign categories_list = site.categories | sort %}
+        {% if categories_list.first[0] == null %}
+        {% for category in categories_list %}
+        <li><a style="font-size: 12px" href="{{site.baseurl}}/categories/#{{ category }}">{{ category }}</a></li>
+        {% endfor %}
+        {% else %}
+        {% for category in categories_list %}
+        <li><a style="font-size: 12px" href="{{site.baseurl}}/categories/#{{ category[0] }}">{{ category[0] }}</a></li>
+        {% endfor %}
+        {% endif %}
+        {% assign categories_list = null %}
+      </ul>
+    </section> <!-- End Section Category -->
+  </footer>
+
+  <footer>
+    <section class="contact contact-title">
+      <h3 class="contact-title">Tags</h3>
+      <ul class="tags">
+        <!--  cycles through tag list and creates header row of all tags used in site with accompanying per-tag counts...-->
+        {% for this_word in tag_words limit: 5%}
+        {% assign tag_size = this_word | split: '#' %}
+        <li ><a style="font-size: 12px" href="{{site.baseurl}}/tags#{{ tag_size[1] }}" class="tag">{{ tag_size[1] }} <span>({{ tag_size[0] }})</span></a></li>
+        {% endfor %}
+      </ul>
+    </section> <!-- End Section Tags -->
+  </footer>
+
   <footer>
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
@@ -19,27 +52,27 @@ layout: default
         {% if site.social-twitter %}
           <li><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
         {% else %}
-          <li><a href="https://twitter.com/artemsheludko_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+<!--          <li><a href="https://twitter.com/artemsheludko_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>-->
         {% endif %}
         {% if site.social-facebook %}
           <li><a href="https://facebook.com/{{ site.social-facebook }}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
         {% else %}
-          <li><a href="https://facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+<!--          <li><a href="https://facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>-->
         {% endif %}
         {% if site.social-github %}
           <li class="github"><a href="http://github.com/{{site.social-github}}" target="_blank"><i class="fa fa-github"></i></a></li>
         {% else %}
-          <li class="github"><a href="http://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+<!--          <li class="github"><a href="http://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>-->
         {% endif %}
         {% if site.social-linkedin %}
           <li class="linkedin"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         {% else %}
-          <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+<!--          <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>-->
         {% endif %}
         {% if site.social-email %}
           <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
         {% else %}
-          <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+<!--          <li class="email"><a href="mailto:example.david@blog.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>-->
         {% endif %}
       </ul>
     </section> <!-- End Section Contact -->
