--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,11 @@ layout: main
 <!--          <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a>-->
 <!--          <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank">Google+</a>-->
 <!--        </div>-->
+        <div class="page-share">
+          {% for categorie in page.categories %}
+          <a href="{{site.baseurl}}/categories#{{categorie}}" class="tag">&#35; {{ categorie }}</a>
+          {% endfor %}
+        </div>
         <div class="page-tag">
           {% for tag in page.tags %}
             <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">&#35; {{ tag }}</a>
