--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+{% capture site_tags %}{% for tag in site.tags %}{{ tag[1].size }}#{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign tag_words = site_tags | split:',' | sort | reverse%}
 <aside class="sidebar">
   <header>
     <div class="about">
