Try fix hasgtag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: main
 <!--        </div>-->
         <div class="page-share">
           {% for categorie in page.categories %}
-          <a href="{{site.baseurl}}/categories/{{categorie}}" class="tag">{{ categorie }}</a>
+          <a href="{{site.baseurl}}/categories#{{categorie}}" class="tag">{{ categorie }}</a>
           {% endfor %}
         </div>
         <div class="page-tag">
