--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1222,8 +1222,9 @@ a.newer-posts:hover {
   padding: 0;
   margin: 0;
   max-height: 500px;
-  background-color: #fafafa;
+  background-color: #ffffff;
   overflow: hidden;
+  text-align:center;
 }
 
 .page-cover-image figure {
@@ -1244,7 +1245,7 @@ a.newer-posts:hover {
 }
 
 .page-cover-image .page-image {
-  width: 100%;
+/* width: 100%; */
   height: 100%;
 }
 
