--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: main
 <!--        </div>-->
         <div class="page-share">
           {% for categorie in page.categories %}
-          <a href="{{site.baseurl}}/categories#{{ categorie | cgi_escape }}" class="tag">{{ categorie }}</a>
+          <a href="{{site.baseurl}}/categories#{{ categorie | strip }}" class="tag">{{ categorie }}</a>
           {% endfor %}
         </div>
         <div class="page-tag">
