--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,8 @@ layout: main
 <!--        </div>-->
         <div class="page-share">
           {% for category in page.categories %}
-          <a href="{{site.baseurl}}/categories#{{ category | cgi_escape }}" class="tag">{{ category }}</a>
+            {% assign category_words = category | cgi_escape %}
+          <a href="{{site.baseurl}}/categories#{{ category_words }}" class="tag">{{ category_words }}</a>
           {% endfor %}
         </div>
         <div class="page-tag">
