--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,12 +34,12 @@ layout: main
         <div class="page-share">
           {% for category in page.categories %}
             {% assign category_words = category | cgi_escape %}
-          <a href="{{site.baseurl}}/categories#{{ category_words }}" class="tag">{{ category_words }}</a>
+          <a href="{{site.baseurl}}/categories#{{ category_words }}" class="tag">ABC{{ category_words }}</a>
           {% endfor %}
         </div>
         <div class="page-tag">
           {% for tag in page.tags %}
-            <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">&#35;{{ tag }}</a>
+            <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">&#35;{{ tag | cgi_escape }}</a>
           {% endfor %}
         </div>
       </div>
