--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -21,12 +21,9 @@ layout: default
         {% assign categories_list = site.categories | sort %}
         {% if categories_list.first[0] == null %}
         {% for category in categories_list %}
-        <li><a style="font-size: 12px" href="{{site.baseurl}}/categories#{{ category }}">{{ category }}</a></li>
+        <li><a style="font-size: 12px" href="{{site.baseurl}}/categories#{{ category | cgi_escape }}">{{ category }}</a></li>
         {% endfor %}
         {% else %}
-        {% for category in categories_list %}
-        <li><a style="font-size: 12px" href="{{site.baseurl}}/categories#{{ category[0] }}">{{ category[0] }}</a></li>
-        {% endfor %}
         {% endif %}
         {% assign categories_list = null %}
       </ul>
@@ -40,7 +37,7 @@ layout: default
         <!--  cycles through tag list and creates header row of all tags used in site with accompanying per-tag counts...-->
         {% for this_word in tag_words limit: 5%}
         {% assign tag_size = this_word | split: '#' %}
-        <li ><a style="font-size: 12px" href="{{site.baseurl}}/tags#{{ tag_size[1] }}" class="tag">&#35; {{ tag_size[1] }} <span>({{ tag_size[0] }})</span></a></li>
+        <li ><a style="font-size: 12px" href="{{site.baseurl}}/tags#{{ tag_size[1] | cgi_escape  }}" class="tag">&#35; {{ tag_size[1] }} <span>({{ tag_size[0] }})</span></a></li>
         {% endfor %}
       </ul>
     </section> <!-- End Section Tags -->
