Upd new tab when open source code

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: main
       {{content | markdownify}}
       {% if page.source %}
       <p class="normal">
-        Source code ở <a href="{{page.source}}">đây</a>
+        Source code ở <a href="{{page.source}}" target="_blank">đây</a>
       </p>
       {% endif %}
       <div class="page-footer">
