--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1141,8 +1141,9 @@ footer .copyright {
   max-width: 100%;
   min-height: 11rem;
   -webkit-background-size: cover;
-          background-size: cover;
+          background-size: contain;
   background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .post .post-content {
