Add img-hidden attribute

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,12 @@ layout: main
     {% if page.img %}
     <div class="page-cover-image">
       <figure>
-        <img class="page-image" src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
-        {% if page.fig-caption %}
-          <figcaption>{{page.fig-caption}}</figcaption>
+        {% if page.img-hidden %}
+        {% else %}
+          <img class="page-image" src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
+          {% if page.fig-caption %}
+            <figcaption>{{page.fig-caption}}</figcaption>
+          {% endif %}
         {% endif %}
       </figure>
     </div> <!-- End Page Cover Image -->
