--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: main
 ---
 <article class="article-page">
   <div class="page-content">
-    {% if page.hide-img == "yes" %}
+    {% if page.hide-img == yes %}
     {% else %}
       {% if page.img %}
       <div class="page-cover-image">
