--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: main
 <article class="article-page">
   <div class="page-content">
     {% if page.hide-img == yes %}
-    {% else %}
+<!--    {% else %}-->
       {% if page.img %}
       <div class="page-cover-image">
        <figure>
