--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,18 +3,15 @@ layout: main
 ---
 <article class="article-page">
   <div class="page-content">
-    {% if page.hide-img == yes %}
-<!--    {% else %}-->
-      {% if page.img %}
-      <div class="page-cover-image">
-       <figure>
-          <img class="page-image" src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
-          {% if page.fig-caption %}
-            <figcaption>{{page.fig-caption}}</figcaption>
-          {% endif %}
-        </figure>
-      </div> <!-- End Page Cover Image -->
-      {% endif %}
+    {% if page.img and page.hide-img == nil %}
+    <div class="page-cover-image">
+      <figure>
+        <img class="page-image" src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
+        {% if page.fig-caption %}
+          <figcaption>{{page.fig-caption}}</figcaption>
+        {% endif %}
+      </figure>
+    </div> <!-- End Page Cover Image -->
     {% endif %}
     <div class="wrap-content">
       <header class="header-page">
